--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@ body {
   font-family: "PT Mono", monospace !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
+  background-image: linear-gradient(to left, rgb(20, 26, 41), rgb(15, 22, 35));
 }
